--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
         <section class="video-section">
             <div class="container">
                 <h2 data-lang="discover">Discover Seed Paper</h2>
-                <video controls autoplay muted loop>
-                    <source src="seed-paper-video.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/5mlu3AdWLNM?si=aHCpj0dhUo9Qm5OB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
 
